--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>eterminal</title>
+    <style>
+    </style>
   </head>
-  <body>
+  <body style="margin: 0px">
     <noscript>
       <strong>We're sorry but eterminal doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
